--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
+    margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    list-style-type: none;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     background-color: #d9dcd6;
 }
 
@@ -12,26 +13,47 @@ header {
     margin: 0;
     padding: 0;
     height: 50px;
-    background: rgba(56, 55, 55, 0.6);
-    list-style-type: none;
 }
 
 header h1 {
     height: 70%;
     width: 30%;
-    background-color: rgb(20, 148, 199);
     text-align: left;
-    position: relative;
-    box-shadow: 2px -5px 5px rgba(34,34,34,0.6);
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+}
+
+image {
+    max-width: 100%;
+    height: auto;
+}
+
+.textover img {width: 100%;}
+
+.textover {position: relative; }
+
+.textover figcaption {
+    position:absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.textover figcaption {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px;
+    color:  white;
+    font-weight: bold;
+    text-align: center;
+    background: (0, 0, 0, 0.6);
 }
 
 nav {
     display:flex;
     justify-content: flex-end;
     float: right;
+    
 }
 
 ul {
@@ -46,4 +68,32 @@ ul {
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px; 
+    text-align: right;
+}
+
+.container {
+    display: flex;
+
+}
+
+.work {
+    flex: 4;
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  } 
+
+
+  @media screen and (max-width: 992px) {
+      
+  }
+
+  @media screen and (max-width: 768px) {
+      
+}
+
+@media screen and (max-width: 576px) {
+      
 }
