--- a/style.css
+++ b/style.css
@@ -1,27 +1,103 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    list-style-type: none;
+    box-sizing: border-box;
+
 }
 
 body {
     background-color: #d9dcd6;
 }
 
-header {
-    margin: 0;
-    padding: 0;
-    height: 50px;
+
+.header {
+    padding: 20px;
+    background-color:rgb(55, 55, 61);
+    font-family:Arial, Helvetica, sans-serif;
+    color: rgb(132, 198, 201);
 }
 
 header h1 {
-    height: 70%;
-    width: 30%;
-    text-align: left;
-    display: flex;
+   display: inline;
+   font-size: 48px;
+}
+
+.nav {
+    list-style: none;
+    display:flex;
+    display: inline;
+    padding: 0;
+    margin: 0;
+    float: right;
+    
+}
+
+li span {
+    text-decoration: underline;
+    padding-top: 30%;
+    word-spacing: 25%;
+    align-content: space-between 25px;
+}
+
+.programs {
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-size: 14px;
+    
+}
+
+ul {
+    list-style-type: none;
+    display: inline-flex;
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    color: rgb(45, 76, 99);
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: rgb(45, 76, 99);
+}
+
+#logo-container img {
+    width: 100%;
+    height: 100%;
+ }
+
+.responsive {
+    width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box {
+    width: 300px; 
+    height: 300px;
+    background: burlywood;
+    color:white;
+    font-size: 48px;
+    margin: 10px;
+    border-style: solid;
+    border-color: rgb(132, 198, 201);
+    border-width: 5px;
+}
+
+#special {
+    background: navy;
+    
 }
 
 image {
@@ -29,68 +105,25 @@ image {
     height: auto;
 }
 
-.textover img {width: 100%;}
-
-.textover {position: relative; }
-
-.textover figcaption {
-    position:absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.textover figcaption {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 10px;
-    color:  white;
-    font-weight: bold;
-    text-align: center;
-    background: (0, 0, 0, 0.6);
-}
-
-nav {
-    display:flex;
-    justify-content: flex-end;
-    float: right;
-    
-}
-
-ul {
-    list-style-type: none;
-}
-
-.about {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 48px;
-}
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px; 
-    text-align: right;
-}
-
-.container {
-    display: flex;
-
-}
 
 .work {
-    flex: 4;
-    background-color: #fff;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  } 
+
+}
+
+.card {
 
 
-  @media screen and (max-width: 992px) {
+}
+
+.footer {
+    display: inline-flex;
+}
+
+@media screen and (max-width: 992px) {
       
-  }
+}
 
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
       
 }
 
