--- a/style.css
+++ b/style.css
@@ -9,19 +9,21 @@ body {
     background-color: #d9dcd6;
 }
 
-
-.header {
-    padding: 20px;
-    background-color:rgb(55, 55, 61);
-    font-family:Arial, Helvetica, sans-serif;
-    color: rgb(132, 198, 201);
+main {
+/* Turns this element into a flexbox */
+/* Forces elements to the next line if they don't fit */
+margin-top: 2%;
 }
-
-header h1 {
-   display: inline;
-   font-size: 48px;
-}
-
+  
+.main-header {
+display: flex;
+justify-content: space-between;
+padding: 60px;
+font-family: Arial, Helvetica, sans-serif;
+background: #13293d;
+color: rgb(132, 198, 201);
+  }
+  
 .nav {
     list-style: none;
     display:flex;
@@ -32,11 +34,18 @@ header h1 {
     
 }
 
+.nav li {
+  display: inline-block;
+  font-size: 20px;
+  padding: 0;
+}
+
 li span {
     text-decoration: underline;
     padding-top: 30%;
     word-spacing: 25%;
-    align-content: space-between 25px;
+    justify-content: space-between;
+    padding-inline: 25px;
 }
 
 .programs {
@@ -47,86 +56,148 @@ li span {
 
 ul {
     list-style-type: none;
+    margin-top: 20px;
     display: inline-flex;
+    font-weight: bold;
+    text-decoration: underline;
+    /* justify-content: space-between */
 }
 
-h3 {
+/* section {
+    text-align: right;
+} */
+
+.blocktext-h3 {
+    /* margin-left: auto;
+    margin-right: auto; */
     font-family: Arial, Helvetica, sans-serif;
+    width: 50px;
     font-size: 48px;
     color: rgb(45, 76, 99);
+    border-style: solid;
+    border-color: crimson;
 }
 
-p {
+.blocktext {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: rgb(45, 76, 99);
+    border-style: solid;
+    border-color: crimson;
 }
-
-#logo-container img {
-    width: 100%;
-    height: 100%;
- }
 
 .responsive {
     width: 100%;
     height: auto;
 }
 
-
-
-
-
-
-
-.flex-container {
+/* Flex Container */
+.flex-container-body {
     display: flex;
+    flex-direction: row;
+    margin-left: 15px;
+    Flex: 100%; 
+}
+
+.flex-container-about{
+    display: flex;
+    max-width: 100%;
+    flex: 100%;
+    margin-left: 15px;
+    max-width: 25%;
+}
+
+.flex-container-work {
+    display: flex;
+    flex: 75%;
+    flex-direction: column;
     flex-wrap: wrap;
+    margin-right: 15px;
 }
 
-.box {
-    width: 300px; 
-    height: 300px;
-    background: burlywood;
-    color:white;
-    font-size: 48px;
-    margin: 10px;
+.flex-container-contact {
+    display: flex;
+    flex: 75%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-right: 15px;
+}
+
+.flex-container-row {
+    display: flex;
+    flex: 75%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 600px;
+    margin-right: 15px;
+}
+
+/* Flex Items */
+.surf-report {
+    flex: 100%;
+    max-width: 100%;
     border-style: solid;
-    border-color: rgb(132, 198, 201);
-    border-width: 5px;
+    border-color: blue;
 }
 
-#special {
-    background: navy;
+.led-wall {
+    max-width: 50%;
+    border-style: solid;
+    border-color: blue;
+}
+
+.calculator {
+    border-style: solid;
+    border-color: blue;
+}
+
+.pastel-puzzles {
+    border-style: solid;
+    border-color: blue;
+
+}
+
+.run-buddy {
+    border-style: solid;
+    border-color: blue;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    /* display: inline-flex;
+    justify-content: space-between; */
+    font-family:Arial, Helvetica, sans-serif;
+    text-align: right;
+    /* align-items: flex-start; */
+    color: rgb(45, 76, 99);
     
 }
 
-image {
-    max-width: 100%;
-    height: auto;
-}
+/* @media screen and (max-width: 992px) {
+    
+} */
 
+/* @media screen and (max-width: 768px) {
 
-.work {
-
-}
-
-.card {
-
-
-}
-
-.footer {
-    display: inline-flex;
-}
-
-@media screen and (max-width: 992px) {
-      
-}
-
-@media screen and (max-width: 768px) {
-      
-}
-
+} */
+/* 
 @media screen and (max-width: 576px) {
       
-}
+} */
