--- a/style.css
+++ b/style.css
@@ -68,10 +68,54 @@ ul {
 
 .container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    margin-left: 2rem;
+    flex-wrap: wrap; 
+    justify-content: space-around;
 
     }
+
+.container > .surf {
+position: relative;
+margin: 1rem;
+
+}
+.container > .surf2 {
+    position: relative;
+    margin: 1rem;
+    
+    }
+
+.container > .surf2 > img {
+    height: 45rem;
+    width: 1100px;
+
+        }
+
+.container > .surf > img {
+height: 15rem;
+width: 365px;
+
+
+}
+
+.container > .surf2 > h4 {
+    background: red;
+    color: white;
+    padding: 1rem;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+
+.container > .surf > h4 {
+    background: red;
+    color: white;
+    padding: 1rem;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+
 
 .column-1 {
     flex-direction: row;
@@ -85,5 +129,34 @@ ul {
     border-style: solid;
     border-color: rgb(132, 198, 201);
 }
+
+.class-1{
+    display: flex;
+    align-items: center;
+    margin: 3rem;
+    flex-wrap: wrap;
+
+}
+
+.class-1 > p {
+    margin-left: 2rem;
+}
+
+.class-1 > h3 {
+    padding-right: 1rem;
+    border-right: 2px solid red;
+}
+
+.h2 {
+    float: right;
+    margin-right: 6rem;
+    transform:translateY(-6rem);
+    background: red;
+    color: white;
+    padding: 1rem;
+    font-size: 1.2rem;
+    
+}
+
 
 
