--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ li {
 }
 
 .responsive {
+
     width: 100%;
     height: auto;
 }
@@ -33,9 +34,9 @@ li {
 }
 
 
-.nav {
-    list-style: none;
+.header-links {
     display: flex;
+    list-style: none;
     display: inline;
     padding: 0;
     margin: 0;
@@ -47,6 +48,7 @@ li {
     display: inline-block;
     font-size: 20px;
     padding: 0;
+    color: rgb(132, 198, 201);
   }
 
 li span {
@@ -70,36 +72,43 @@ ul {
     display: flex;
     margin-left: 2rem;
     flex-wrap: wrap; 
-    justify-content: space-around;
+    justify-content: space-evenly;
+    max-width: 100%;
+    width: 1100px;
 
     }
 
-.container > .surf {
+.container > .work-2 {
 position: relative;
 margin: 1rem;
 
 }
-.container > .surf2 {
+.container > .work-1 {
     position: relative;
     margin: 1rem;
     
     }
 
-.container > .surf2 > img {
-    height: 45rem;
-    width: 1100px;
+.container > .work-1 > img {
+    height: 30rem;
+    max-width: 100%;
+    Width: 980px;
+    flex: 100%;
 
-        }
+}
 
-.container > .surf > img {
+
+.container > .work-2 > img {
 height: 15rem;
-width: 365px;
+max-width: 100%;
+width: 450px;
+flex: 50%;
 
 
 }
 
-.container > .surf2 > h4 {
-    background: red;
+.container > .work-1 > h4 {
+    background: rgb(132, 198, 201);
     color: white;
     padding: 1rem;
     position: absolute;
@@ -107,8 +116,9 @@ width: 365px;
     left: 1rem;
 }
 
-.container > .surf > h4 {
-    background: red;
+
+.container > .work-2 > h4 {
+    background: rgb(132, 198, 201);
     color: white;
     padding: 1rem;
     position: absolute;
@@ -130,33 +140,86 @@ width: 365px;
     border-color: rgb(132, 198, 201);
 }
 
-.class-1{
+.class-1 {
     display: flex;
     align-items: center;
-    margin: 3rem;
-    flex-wrap: wrap;
+    margin: 0rem;
+    flex-wrap: nowrap;
+    font-family: Arial, Helvetica, sans-serif;
+    
 
+}
+
+.class-2 {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: flex-end;
+
+}
+
+.class-2 > p {
+    margin-left: 5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#13293d;
 }
 
 .class-1 > p {
     margin-left: 2rem;
 }
 
-.class-1 > h3 {
+.class-2 > h3 {
+    /* height: 70%; */
+    padding: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(132, 198, 201);
     padding-right: 1rem;
-    border-right: 2px solid red;
+    border-right: 2px solid #13293d;
+    font-size: larger;
+
+}
+
+.class-1 > h3 {
+    height: 70%;
+    padding: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(132, 198, 201);
+    padding-right: 1rem;
+    border-right: 2px solid #13293d;
+
 }
 
 .h2 {
     float: right;
     margin-right: 6rem;
     transform:translateY(-6rem);
-    background: red;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #13293d;
     color: white;
     padding: 1rem;
     font-size: 1.2rem;
     
 }
 
+.main-footer {
+    display: flex;
+    justify-content: space-evenly;
+    height: 70%;
+    padding: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    background: #13293d;
+    color: rgb(132, 198, 201);
+}
+
+@media screen and (max-width: 600px) {
+    .class-1 {
+      flex-direction: column;
+    }
+    .class-2 {
+        flex-direction: column;
+      }
+  }
 
 
