--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-margin-top: 0%;
+    margin-top: 0%;
 }
 
 li {
@@ -18,7 +18,6 @@ li {
 }
 
 .responsive {
-
     width: 100%;
     height: auto;
 }
@@ -27,12 +26,11 @@ li {
     display: flex;
     justify-content: space-between;
     height: 70%;
-    padding: 60px;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 40px;
+    /* font-family: Arial, Helvetica, sans-serif; */
     background: #13293d;
     color: rgb(132, 198, 201);
 }
-
 
 .header-links {
     display: flex;
@@ -41,7 +39,6 @@ li {
     padding: 0;
     margin: 0;
     float: right;
-
 }
 
 .nav li {
@@ -49,7 +46,7 @@ li {
     font-size: 20px;
     padding: 0;
     color: rgb(132, 198, 201);
-  }
+}
 
 li span {
     text-decoration: underline;
@@ -57,7 +54,6 @@ li span {
     word-spacing: 25%;
     justify-content: space-between;
     padding-inline: 25px;
-
 }
 
 ul {
@@ -65,49 +61,42 @@ ul {
     margin-top: 20px;
     display: inline-flex;
     font-weight: bold;
-    
-    }
+}
 
 .container {
     display: flex;
     margin-left: 2rem;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     justify-content: space-evenly;
     max-width: 100%;
     width: 1100px;
-
-    }
-
-.container > .work-2 {
-position: relative;
-margin: 1rem;
-
 }
-.container > .work-1 {
+
+.container>.work-2 {
     position: relative;
     margin: 1rem;
-    
-    }
+}
 
-.container > .work-1 > img {
+.container>.work-1 {
+    position: relative;
+    margin: 1rem;
+}
+
+.container>.work-1>img {
     height: 30rem;
     max-width: 100%;
     Width: 980px;
     flex: 100%;
-
 }
 
-
-.container > .work-2 > img {
-height: 15rem;
-max-width: 100%;
-width: 450px;
-flex: 50%;
-
-
+.container>.work-2>img {
+    height: 15rem;
+    max-width: 100%;
+    width: 450px;
+    flex: 50%;
 }
 
-.container > .work-1 > h4 {
+.container>.work-1>h4 {
     background: rgb(132, 198, 201);
     color: white;
     padding: 1rem;
@@ -116,8 +105,7 @@ flex: 50%;
     left: 1rem;
 }
 
-
-.container > .work-2 > h4 {
+.container>.work-2>h4 {
     background: rgb(132, 198, 201);
     color: white;
     padding: 1rem;
@@ -125,7 +113,6 @@ flex: 50%;
     top: 1rem;
     left: 1rem;
 }
-
 
 .column-1 {
     flex-direction: row;
@@ -145,69 +132,63 @@ flex: 50%;
     align-items: center;
     margin: 0rem;
     flex-wrap: nowrap;
-    font-family: Arial, Helvetica, sans-serif;
-    
-
+    /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 .class-2 {
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     justify-content: flex-end;
-
 }
 
-.class-2 > p {
+.class-2>p {
     margin-left: 5rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color:#13293d;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    color: #13293d;
 }
 
-.class-1 > p {
+.class-1>p {
     margin-left: 2rem;
 }
 
-.class-2 > h3 {
+.class-2>h3 {
     /* height: 70%; */
     padding: 60px;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     color: rgb(132, 198, 201);
     padding-right: 1rem;
     border-right: 2px solid #13293d;
     font-size: larger;
-
 }
 
-.class-1 > h3 {
+.class-1>h3 {
     height: 70%;
     padding: 60px;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     color: rgb(132, 198, 201);
     padding-right: 1rem;
     border-right: 2px solid #13293d;
-
 }
 
 .h2 {
     float: right;
     margin-right: 6rem;
-    transform:translateY(-6rem);
-    font-family: Arial, Helvetica, sans-serif;
+    transform: translateY(-6rem);
+    /* font-family: Arial, Helvetica, sans-serif; */
     background: #13293d;
     color: white;
     padding: 1rem;
     font-size: 1.2rem;
-    
 }
 
 .main-footer {
     display: flex;
     justify-content: space-evenly;
     height: 70%;
-    padding: 60px;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 40px;
+    /* font-family: Arial, Helvetica, sans-serif; */
     font-weight: bold;
     background: #13293d;
     color: rgb(132, 198, 201);
@@ -215,15 +196,14 @@ flex: 50%;
 
 @media screen and (max-width: 600px) {
     .class-1 {
-      flex-direction: column;
+        flex-direction: column;
     }
     .class-2 {
         flex-direction: column;
-      }
-  }
+    }
+}
 
-  #profilepic {
-      width: 150px;
-      height: 150px;
-  }
-
+#profilepic {
+    width: 150px;
+    height: 150px;
+}
