--- a/style.css
+++ b/style.css
@@ -137,8 +137,9 @@ ul {
 
 .class-2 {
     display: flex;
-    align-items: center;
+    align-items: left;
     flex-wrap: nowrap;
+    margin-top: 3%;
     /* font-family: Arial, Helvetica, sans-serif; */
     justify-content: flex-end;
 }
